--- a/index.html
+++ b/index.html
@@ -1719,7 +1719,8 @@
             localStorage.setItem('ctrlc_waitlist_email', email);
             this.showSuccess(email);
           } else {
-            this.showError(result.error || 'Something went wrong. Please try again.');
+            console.error('API Error:', result);
+            this.showError(result.details || result.error || 'Something went wrong. Please try again.');
           }
         } catch (error) {
           console.error('Submission error:', error);
@@ -1896,8 +1897,8 @@
 
       setupParallaxEffects() {
         // Background pattern parallax
-        gsap.to('.bg-canvas::before', {
-          yPercent: -50,
+        gsap.to('.bg-canvas', {
+          yPercent: -20,
           ease: "none",
           scrollTrigger: {
             trigger: 'body',
@@ -1919,8 +1920,8 @@
 
         tl.fromTo('.feature-item', {
           opacity: 0,
-          y: 50,
-          scale: 0.95,
+          y: 30,
+          scale: 0.98,
           rotateY: 15
         }, {
           opacity: 1,
@@ -1963,10 +1964,10 @@
           duration: 0.6,
           ease: "power2.out"
         }, "-=0.4")
-        .fromTo('.mockup-card', {
+        .fromTo('.app-window', {
           opacity: 0,
-          y: 80,
-          scale: 0.9
+          y: 60,
+          scale: 0.95
         }, {
           opacity: 1,
           y: 0,
@@ -2003,12 +2004,12 @@
         cursor: none;
       }
 
-      a, button, .feature-item, .mockup-card, .workflow-step, .proof-badge {
+      a, button, .feature-item, .app-window, .workflow-step, .proof-badge {
         cursor: none;
       }
 
       /* Enhanced material hover states */
-      .feature-item:hover, .mockup-card:hover, .workflow-step:hover {
+      .feature-item:hover, .app-window:hover, .workflow-step:hover {
         border-color: var(--chrome) !important;
         box-shadow: var(--glow-white) !important;
         transform: translateY(-8px) scale(1.02) !important;
@@ -2026,7 +2027,7 @@
           cursor: auto;
         }
 
-        .feature-item, .mockup-card, .workflow-step {
+        .feature-item, .app-window, .workflow-step {
           cursor: auto;
         }
       }
